--- a/demo/app_api/examples/example_app_api_dev.ipynb
+++ b/demo/app_api/examples/example_app_api_dev.ipynb
@@ -35,7 +35,18 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "# Import standard packages.\n",
     "import os\n",
@@ -62,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "Timestamp:\n",
-      "2017-03-28T00:28:14GMT\n",
+      "2017-03-29T05:40:32GMT\n",
       "\n",
       "Versions:\n",
       "Python: sys.version_info(major=3, minor=5, micro=2, releaselevel='final', serial=0)\n",
@@ -95,7 +106,7 @@
       "platform linux -- Python 3.5.2, pytest-2.9.2, py-1.4.31, pluggy-0.3.1 -- /opt/conda/bin/python\n",
       "cachedir: .cache\n",
       "rootdir: /opt/demo, inifile: \n",
-      "collected 8 items \u001b[0m\u001b[1m\u001b[1m\u001b[1m\n",
+      "collected 8 items \u001b[0m\u001b[1m\u001b[1m\n",
       "\u001b[0m\n",
       "tests/test__init__.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
       "tests/test__init__.py::test__version__ \u001b[32mPASSED\u001b[0m\n",
@@ -106,7 +117,7 @@
       "tests/test_app_template/test_template.py::test_prepend_this \u001b[32mPASSED\u001b[0m\n",
       "tests/test_utils/test_utils__init__.py::test__all__ \u001b[32mPASSED\u001b[0m\n",
       "\n",
-      "\u001b[32m\u001b[1m=========================== 8 passed in 5.65 seconds ===========================\u001b[0m\n"
+      "\u001b[1m\u001b[32m=========================== 8 passed in 6.86 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
@@ -639,6 +650,199 @@
     "preds.index = preds.index.astype(int)\n",
     "preds.sort_index(inplace=True)\n",
     "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: main.py [-h] [--logging_level {DEBUG,INFO,WARNING,ERROR,CRITICAL}]\r\n",
+      "               {train,predict,api} ...\r\n",
+      "\r\n",
+      "Predictive application with an API.\r\n",
+      "\r\n",
+      "positional arguments:\r\n",
+      "  {train,predict,api}\r\n",
+      "    train               Train (or retrain) the model.\r\n",
+      "    predict             Predict target(s) from features.\r\n",
+      "    api                 Serve the predictive model with a RESTful API.\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help            show this help message and exit\r\n",
+      "  --logging_level {DEBUG,INFO,WARNING,ERROR,CRITICAL}\r\n",
+      "                        Verbosity of logging level from 'DEBUG' (most) to\r\n",
+      "                        'CRITICAL' (least). Default: INFO\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python demo/app_api/main.py --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# scratch\n",
+    "\n",
+    "scratch below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0083999999999999995"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_heads = list()\n",
+    "for _ in range(int(1e4)):\n",
+    "    num_heads = 0\n",
+    "    for toss in range(30):\n",
+    "        if np.random.uniform() < 0.5:\n",
+    "            num_heads += 1\n",
+    "    dist_heads.append(num_heads)\n",
+    "sum(np.greater_equal(dist_heads, 22))/len(dist_heads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16569999999999999"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_stars = [84, 72, 57, 46, 63, 76, 99, 91]\n",
+    "scores_none = [81, 69, 74, 61, 56, 87, 69, 65, 66, 44, 62, 69]\n",
+    "diff_orig = np.mean(scores_stars) - np.mean(scores_none)\n",
+    "scores = scores_stars + scores_none\n",
+    "diffs = list()\n",
+    "for _ in range(int(1e4)):\n",
+    "    scores = np.random.permutation(scores)\n",
+    "    scores_s = scores[:len(scores_stars)]\n",
+    "    scores_n = scores[-len(scores_none):]\n",
+    "    assert len(scores) == len(scores_s) + len(scores_n)\n",
+    "    diff = np.mean(scores_s) - np.mean(scores_n)\n",
+    "    diffs.append(diff)\n",
+    "sum(np.greater_equal(diffs, diff_orig))/len(diffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26.0, 28.800000000000001, 32.049999999999997)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heights = [48, 24, 51, 12, 21, 41, 25, 23, 32, 61, 19, 24, 29, 21, 23, 13, 32, 18, 42, 18]\n",
+    "means = list()\n",
+    "for _ in range(int(1e4)):\n",
+    "    sample = np.random.choice(heights, size=len(heights), replace=True)\n",
+    "    means.append(np.mean(sample))\n",
+    "np.percentile(means, 15.87), np.percentile(means, 50.00), np.percentile(means, 86.13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "374.21334255460323"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# #60, SOA Exam P\n",
+    "prices = np.random.normal(loc=200, scale=np.sqrt(260), size=int(1e6))\n",
+    "prices *= 1.2\n",
+    "np.var(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "309.15999999999997"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10.79 + 16.53 + 200.98 + 80.86"
    ]
   },
   {
